[package]
name = "ZeroRS"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.27" }
serenity = { version = "0.12.4", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
poise = { version = "0.6.1" }
audiopus = { version = "0.3.0-rc.0" }
songbird = { version = "0.4.6", default-features = true }
symphonia = { version = "0.5.4" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
tracing-futures = { version = "0.2.5" }
